Button 'genera' now working

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     </div>
 
-    <div class="ticket_div mt-3">
+    <div class="ticket_div my-3" id="ticket_window">
         <h2 class="text-uppercase text-white text-center py-3">il tuo biglietto</h2>
 
         <div class="container p-4 rounded rounded-4 bg-white">
