--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
                     Nome completo
                 </h5>
                 <!-- <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"> -->
-                <input class="form-control" id="name_form">
+                <input type="text" class="form-control" id="name_form">
             </div>
             <div class="col d-flex flex-column align-items-center px-4">
                 <h5 class="font_color_custom py-1">
                     Km da percorrere
                 </h5>
                 <!-- <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"> -->
-                <input class="form-control" id="km_form">
+                <input type="number" class="form-control" id="km_form">
             </div>
             <div class="col d-flex flex-column align-items-center px-4">
                 <h5 class="font_color_custom py-1">
@@ -37,7 +37,7 @@
                 </h5>
                 <!-- <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"> -->
                 <select class="form-select" aria-label="Default select example" id="age_form">
-                    <option selected>Seleziona età</option>
+                    <!-- <option selected>Seleziona età</option> -->
                     <option value="young">Young (fino a 18 anni)</option>
                     <option value="standard">Standard</option>
                     <option value="senior">Senior (over 65)</option>
@@ -66,31 +66,31 @@
             <div class="row border">
                 <div class="col-4 p-3 bg-secondary">
                     <h5 class="text-uppercase">nome passeggero</h5>
-                    <span id="customer_name">
+                    <span class="pt-4" id="customer_name">
 
                     </span>
                 </div>
                 <div class="col p-3">
                     <h5 class="">Offerta</h5>
-                    <span id="discount_offer">
+                    <span class="pt-4" id="discount_offer">
 
                     </span>
                 </div>
                 <div class="col p-3">
                     <h5 class="">Carrozza</h5>
-                    <span id="vagon">
+                    <span class="pt-4" id="vagon">
 
                     </span>
                 </div>
                 <div class="col p-3">
                     <h5 class="">Codice CP</h5>
-                    <span id="id_train">
+                    <span class="pt-4" id="id_train">
 
                     </span>
                 </div>
                 <div class="col p-3">
                     <h5 class="">Costo biglietto</h5>
-                    <span id="ticket_price">
+                    <span class="pt-4" id="ticket_price">
 
                     </span>
                 </div>
