--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 
         <div class="container p-4 rounded rounded-4 bg-white">
             <h5 class="text-uppercase">dettaglio passeggeri</h5>
-            <div class="row border">
-                <div class="col-4 p-3 bg-secondary">
+            <div class="row border rounded rounded-4">
+                <div class="col-4 p-3 bg-secondary rounded rounded-1">
                     <h5 class="text-uppercase">nome passeggero</h5>
-                    <span class="pt-4" id="customer_name">
+                    <span class="pt-4 fw-bold" id="customer_name">
 
                     </span>
                 </div>
